--- a/ball-threejs/package.json
+++ b/ball-threejs/package.json
@@ -12,6 +12,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "dat.gui": "^0.7.9",
     "gsap": "^3.11.4",
     "three": "^0.148.0"
